Fix spacing in section titles and text

--- a/assets/css/_intro.scss
+++ b/assets/css/_intro.scss
@@ -32,6 +32,10 @@ h5 span {
   max-width: 750px;
 }
 
+img.responsive-hide {
+  margin-left: 10px;
+}
+
 .responsive-hide {
   @media (max-width: 767px) {
     display: none;
